  * debian/control:
    - Changed my E-Mail address.
    - Bumped B-D on debhelper.
  * debian/compat: now "8".
  * debian/rules: Updated for debhelper v8.

  [ Modestas Vainius ]
  * Disable git-import-orig in debian/watch. One extra command is not a good
    enough reason to lose control of packaging to non-trivial black-box tools.

 -- Kai Wasserbäch <debian@carbon-project.org>  Sun, 16 Jan 2011 11:40:34 +0100

cmake (2.8.3-4) unstable; urgency=low

  * Release to unstable.

 -- Modestas Vainius <modax@debian.org>  Sat, 19 Feb 2011 14:43:46 +0200

cmake (2.8.3-3) experimental; urgency=low

  * Install documentation to /usr/share/cmake-data instead as it's the "base"
    package rather than cmake. Also link doc directories to it.
  * The job of replacing directories with symlinks apparently is a tough one.
    Create a symlink manually in the postinst of the affected (!cmake-data)
    packages.

 -- Modestas Vainius <modax@debian.org>  Sun, 02 Jan 2011 14:10:18 +0200

cmake (2.8.3-2) experimental; urgency=low

  [ Kai Wasserbäch ]
  * debian/source/local-options: Added "unapply-patches".
  * debian/watch: Added git-import-orig invocation.
  * debian/gbp.conf: Added, to ensure we use pristine-tar.
  * debian/patches/FindTCL_fix_#600245.diff: Added. (Closes: #600245)

  [ Modestas Vainius ]
  * Install cmake documentation into /usr/share/doc/cmake/ and link doc
    directories of the rest binary packages to it (needs debhelper 7.4.2).
    (LP: #669197)
  * Backport a patch from 2.8.4 to fix ASM support. Thanks to Leon Nardella for
    heads up. (Closes: #608510, LP: #695335)

 -- Modestas Vainius <modax@debian.org>  Sun, 02 Jan 2011 12:45:38 +0200

cmake (2.8.3-1) experimental; urgency=low

  * New upstream release.

  [ Kai Wasserbäch ]
  * debian/patches/fix_spelling_errors.patch: Added Applied-Upstream header.
  * debian/control: Bumped Standards-Version to 3.9.1, no further changes
    needed.

  [ Modestas Vainius ]
  * Drop patches which were merged upstream: